--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 04:05:09 2018</p>
+         Last Run: Wed Nov 14 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Clear</td>
                         <td>2</td>
                         <td>-3</td>
-                        <td>3</td>
-                        <td>69</td>
+                        <td>4</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>21</td>
-                        <td>WNW</td>
-                        <td>15</td>
+                        <td>NW</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
-                        <td>-4</td>
-                        <td>3</td>
-                        <td>74</td>
+                        <td>-3</td>
+                        <td>5</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>NW</td>
-                        <td>11</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>78</td>
+                        <td>5</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>NW</td>
-                        <td>6</td>
+                        <td>WNW</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              },
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "4"
+                 "4",
+                 "5",
+                 "5"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "74",
-                 "78"
+                 "71",
+                 "77",
+                 "80"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
-                 "11",
-                 "6"
+                 "28",
+                 "22",
+                 "14"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 04:05:09 2018</p>
+         Last Run: Wed Nov 14 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Clear</td>
                         <td>-13</td>
                         <td>-18</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>90</td>
                         <td>0</td>
                         <td>8</td>
@@ -261,7 +261,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>5</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -273,7 +273,7 @@
                         <td>-8</td>
                         <td>-12</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -285,11 +285,11 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>1</td>
+                        <td>0</td>
                      </tr>
                   </tbody>
                </table>
@@ -391,7 +391,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "5",
                  "5",
                  "4",
                  "3"
@@ -404,9 +404,9 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "90",
-                 "83",
-                 "75",
-                 "70"
+                 "84",
+                 "76",
+                 "69"
                ]
              },
              {
@@ -418,7 +418,7 @@
                  "1",
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 04:05:09 2018</p>
+         Last Run: Wed Nov 14 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,15 +479,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>55</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>59</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -495,11 +495,11 @@
                         <td>3</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>W</td>
-                        <td>58</td>
+                        <td>WSW</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -507,7 +507,7 @@
                         <td>4</td>
                         <td>1</td>
                         <td>2</td>
-                        <td>48</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "51",
-                 "48"
+                 "57",
+                 "53",
+                 "50"
                ]
              },
              {
@@ -631,8 +631,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "60",
                  "59",
-                 "58",
                  "57"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 04:05:09 2018</p>
+         Last Run: Wed Nov 14 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -700,9 +700,9 @@
                         <td>3</td>
                         <td>75</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>41</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>42</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>44</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -836,8 +836,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "75",
-                 "76",
-                 "76"
+                 "75",
+                 "75"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "42",
-                 "44"
+                 "37",
+                 "39",
+                 "42"
                ]
              }
            ]
