--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 06:05:13 2018</p>
+         Last Run: Wed Nov 14 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-3</td>
-                        <td>4</td>
-                        <td>70</td>
+                        <td>5</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>21</td>
-                        <td>WNW</td>
-                        <td>24</td>
+                        <td>19</td>
+                        <td>NW</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>18</td>
                         <td>NW</td>
-                        <td>20</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>13</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "5",
                  "5",
                  "5"
                ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "75",
-                 "77"
+                 "72",
+                 "77",
+                 "79"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "20",
-                 "13"
+                 "30",
+                 "23",
+                 "15"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 06:05:13 2018</p>
+         Last Run: Wed Nov 14 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>6</td>
-                        <td>90</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>1</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -261,7 +261,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>5</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -271,11 +271,11 @@
                         <td>10:00 AM</td>
                         <td>Clear</td>
                         <td>-8</td>
-                        <td>-12</td>
+                        <td>-13</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>0</td>
                      </tr>
@@ -285,7 +285,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -319,7 +319,7 @@
                "data":[
                  "-18",
                  "-14",
-                 "-12",
+                 "-13",
                  "-9"
                ]
              },
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "90",
-                 "83",
-                 "75",
-                 "69"
+                 "87",
+                 "82",
+                 "73",
+                 "67"
                ]
              },
              {
@@ -415,7 +415,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
+                 "0",
                  "0",
                  "0",
                  "0"
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 06:05:13 2018</p>
+         Last Run: Wed Nov 14 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -495,9 +495,9 @@
                         <td>3</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WSW</td>
                         <td>60</td>
                      </tr>
@@ -511,7 +511,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -621,7 +621,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "52",
+                 "51",
                  "48"
                ]
              },
@@ -633,7 +633,7 @@
                "data":[
                  "61",
                  "60",
-                 "59"
+                 "58"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 06:05:13 2018</p>
+         Last Run: Wed Nov 14 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,10 +698,10 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>38</td>
                      </tr>
                      <tr>
@@ -714,7 +714,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>41</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -835,7 +835,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
+                 "72",
                  "73",
                  "74"
                ]
@@ -847,7 +847,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "38",
-                 "41",
+                 "40",
                  "43"
                ]
              }
