--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 07:05:02 2018</p>
+         Last Run: Wed Nov 14 08:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>2</td>
                         <td>-3</td>
-                        <td>5</td>
-                        <td>72</td>
+                        <td>4</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>19</td>
-                        <td>NW</td>
-                        <td>30</td>
+                        <td>21</td>
+                        <td>WNW</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>18</td>
                         <td>NW</td>
-                        <td>23</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>15</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
+                 "4",
                  "5",
                  "5"
                ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "77",
-                 "79"
+                 "70",
+                 "76",
+                 "77"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "23",
-                 "15"
+                 "24",
+                 "19",
+                 "12"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 07:05:02 2018</p>
+         Last Run: Wed Nov 14 08:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>6</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -403,7 +403,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
+                 "88",
                  "82",
                  "73",
                  "67"
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 07:05:02 2018</p>
+         Last Run: Wed Nov 14 08:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -495,9 +495,9 @@
                         <td>3</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>WSW</td>
                         <td>60</td>
                      </tr>
@@ -511,7 +511,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -621,7 +621,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "51",
+                 "52",
                  "48"
                ]
              },
@@ -633,7 +633,7 @@
                "data":[
                  "61",
                  "60",
-                 "58"
+                 "59"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 07:05:02 2018</p>
+         Last Run: Wed Nov 14 08:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,10 +698,10 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>38</td>
                      </tr>
                      <tr>
@@ -714,7 +714,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -835,7 +835,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
+                 "73",
                  "73",
                  "74"
                ]
@@ -847,7 +847,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "38",
-                 "40",
+                 "41",
                  "43"
                ]
              }
